# vkst

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
assets/shaders/: fsq.vert  shadertoy.frag  uv.frag
cmake/: CompilerConfig.cmake
cmake/modules/: FindVulkan.cmake
ext/: CMakeLists.txt  update_shaderc_sources.py
src/: CMakeLists.txt  renderer.cc  renderer.h  st.cc  vkinfo.cc
src/plat/: core.h  file_handle.cc  file_handle.h  file_io.cc  file_io.h  filesystem.h  fs_notify.h  fs_notify_linux.cc  fs_notify_linux.h  fs_notify_win32.cc  fs_notify_win32.h  log.cc  log.h  plat_config.h.in
src/vk/: create_loader.py  result.cc  result.h  support.h
src/wsi/: input.cc  input.h  types.h  window.h  window_win32.cc  window_win32.h  window_xlib.cc  window_xlib.h
