include(ExternalProject)

ExternalProject_Add(turf
    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/turf
    DOWNLOAD_COMMAND ""
    CMAKE_ARGS
        "-DTURF_PREFER_CPP11=TRUE"
        "-DTURF_WITH_SAMPLES=FALSE"
        "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
        "-DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>"
)
ExternalProject_Get_Property(turf INSTALL_DIR)
set(TURF_INCLUDE_DIR ${INSTALL_DIR}/include CACHE PATH "" FORCE)
set(TURF_LIBRARY ${INSTALL_DIR}/lib/turf${CMAKE_STATIC_LIBRARY_PREFIX} CACHE PATH "" FORCE)

set(GSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/gsl-lite/include CACHE PATH "" FORCE)

find_package(Vulkan REQUIRED)
#add_library(shaderc STATIC IMPORTED GLOBAL)
#set_target_properties(shaderc PROPERTIES IMPORTED_LOCATION ${SHADERC_LIBRARY})

find_package(PythonInterp 3 REQUIRED)

set(GLM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/glm CACHE PATH "" FORCE)